# lib_ai

./: AGENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ERROR_HANDLING.md  README.md  README_MEMORY_EMBEDDINGS.md  RENAMING_SUMMARY.md  TESTING.md  run_tests.sh
.claude/: settings.local.json
examples/: advanced_tools.rs  agent_basic.rs  agent_chat.rs  agent_custom_tools.rs  agent_streaming.rs  agent_with_semantic_memory.rs  agent_with_surrealdb_memory.rs  cohere_example.rs  derive_examples.rs  derive_tool_example.rs  embeddings_demo.rs  error_handling_demo.rs  memory_demo.rs  multimodal.rs  observability_demo.rs  observability_simple.rs  ollama_example.rs  replicate_example.rs  resilient_provider.rs  structured_agent.rs  structured_demo.rs  structured_output.rs  together_example.rs  tool_calling.rs
lib_ai_derive/: Cargo.toml
lib_ai_derive/src/: lib.rs
src/: error.rs  lib.rs  main.rs  models.rs  traits.rs
src/agent/: agent.rs  builder.rs  context.rs  mod.rs  structured.rs  tools.rs
src/agent/memory/: base.rs  mod.rs  semantic.rs  surrealdb.rs
src/agent/tools/: base.rs  code_executor.rs  database.rs  filesystem.rs  http.rs  mod.rs
src/embeddings/: local.rs  mod.rs  models.rs  openai.rs  provider.rs
src/memory/: redis_memory.rs
src/observability/: cost_tracker.rs  metrics.rs  mod.rs  telemetry.rs  tracing.rs
src/providers/: anthropic.rs  cohere.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  replicate.rs  together.rs  xai.rs
tests/: agent_tests.rs  anthropic_tests.rs  cohere_tests.rs  gemini_tests.rs  integration_tests.rs  memory_tests.rs  mock_tests.rs  ollama_tests.rs  openai_tests.rs  openrouter_tests.rs  replicate_tests.rs  surrealdb_memory_tests.rs  together_tests.rs  xai_tests.rs
tests/common/: mod.rs
